[package]
name = "serde-helpers"
version = "0.1.0"
authors = ["Isobel Redelmeier <iredelmeier@gmail.com>"]
license = "MIT"
description = "Wrappers for serializing/deserializing Rust objects to and from different data formats"
readme = "README.md"
repository = "https://github.com/iredelmeier/serde-helpers"
keywords = ["serde", "serialization"]
categories = ["encoding"]

[lib]
test = false
bench = false
doctest = false

[features]
default = ["json", "yaml"]

json = ["serde_json"]
yaml = ["serde_yaml"]

[dependencies]
serde = "1"
serde_json = { version = "1", optional = true }
serde_yaml = { version = "0.7", optional = true }
